tests/errors/port-mismatch.fil
component main<G>(@interface[G, G+1] go: 1, @[G, G+1] in: 32) -> (@[G, G+1] out: 16) {
    out = in;
}